<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Pilih Gambar</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="preview_image">preview image</string>
    <string name="riwayat">Riwayat</string>
    <string name="tab_text_1">Cancer Detection</string>
    <string name="tab_text_2">Health News</string>
    <string name="back_button">back button</string>
    <string name="cancer_history">Cancer History</string>
    <string name="link">Link</string>
    <string name="no_data">No Data</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
</resources>