<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.cancer_history.CancerHistoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backImageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_arrow_back"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_button"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancer_history"
            style="@style/TextTitle"
            app:layout_constraintStart_toEndOf="@id/backImageButton"
            app:layout_constraintTop_toTopOf="@id/backImageButton"
            app:layout_constraintBottom_toBottomOf="@id/backImageButton"
            app:layout_constraintEnd_toStartOf="@id/view"
            android:gravity="center_horizontal"/>

        <View
            android:id="@+id/view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/backImageButton"
            android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/border_radius"
            android:padding="5dp"
            android:contentDescription="@string/preview_image"
            app:layout_constraintTop_toBottomOf="@id/backImageButton"
            app:layout_constraintStart_toStartOf="@id/backImageButton"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:srcCompat="@drawable/ic_place_holder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/result"
            app:layout_constraintStart_toStartOf="@id/backImageButton"
            app:layout_constraintTop_toBottomOf="@id/previewImageView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
