<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.cancer_detection.CancerDetectionFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="5dp"
        android:background="@drawable/border_radius"
        android:contentDescription="@string/preview_image"
        app:layout_constraintBottom_toTopOf="@+id/analyzeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

    <Button
        android:id="@+id/analyzeButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="8dp"
        android:text="@string/analyze"
        android:textSize="14sp"
        android:background="@drawable/border_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/secondary"
        android:contentDescription="@string/gallery"
        android:src="@drawable/ic_add_photo_alternate_24"
        app:layout_constraintTop_toTopOf="@id/analyzeButton"
        app:layout_constraintBottom_toBottomOf="@id/analyzeButton"
        app:layout_constraintStart_toEndOf="@id/analyzeButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/historyButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/secondary"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/riwayat"
        android:src="@drawable/ic_history"
        app:layout_constraintTop_toTopOf="@id/analyzeButton"
        app:layout_constraintBottom_toBottomOf="@id/analyzeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/analyzeButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>